--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
     <button class="user-input-wrapper__main-button">Start</button>
   </div>
 
-  <div class="main">
-    <canvas class="audio-layer-1"></canvas>
+  <div class="layers-wrapper">
+    <img class="background-layer" src="https://images5.alphacoders.com/108/1082837.png" alt="Helltaker Background">
+    <canvas class="canvas-layer"></canvas>
   </div>
 
   <audio loop class="audio-element" src="../src/assets/epitomize.mp3"></audio>
